Update README with new Vercel setup

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
-DB_HOST=34.76.121.59
-DB_USER=root
-DB_PASSWORD=199310
-DB_NAME=taito
+DB_HOST= sql7.freesqldatabase.com
+DB_USER=sql7780462
+DB_PASSWORD=iUmg5JVkDH
+DB_NAME= sql7780462
 DB_PORT=3306
 PORT=5000
