Add homepage field to client/package.json

--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "homepage": "https://taito-webpage.vercel.app",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
