--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,14 @@
-DB_HOST= sql7.freesqldatabase.com
-DB_USER=sql7780462
-DB_PASSWORD=iUmg5JVkDH
-DB_NAME= sql7780462
+# DB_HOST= sql7.freesqldatabase.com
+# DB_USER=sql7780462
+# DB_PASSWORD=iUmg5JVkDH
+# DB_NAME= sql7780462
+# DB_PORT=3306
+# PORT=5000
+
+DB_HOST=127.0.0.1
 DB_PORT=3306
+DB_USER=root
+DB_PASSWORD=199310
+DB_NAME=taito
+JWT_SECRET=ghtunvldnczsgdyew83
 PORT=5000
